--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Raymond chocolate has been dedicated to make the best chocolate since 1875, with over hundred years of history, we have unique recipes unlike any other brands, providing top-class high quality chocolate.</p>
         </div>
 
         <div class="row skills-content">
