--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
         <div class="section-title">
           <h2>Our Story</h2>
-          <p>Raymond chocolate has been dedicated to make the best chocolate since 1875, with over hundred years of history, we have unique recipes unlike any other brands, providing top-class high quality chocolate.</p>
+          <p>It all began in 1875 in a small confectionary shop in Zurich. Here Raymond Mclean and his son, Fergus Mclean first produced chocolate in solid form. Since then our chocolate has been continuously perfected, becoming what it is today: creamy and rich. An incomparable taste.</p>
         </div>
 
         <div class="row skills-content">
