--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
           <div class="col-lg-12" data-aos="fade-up">
             
-            <img src="<img src="https://packmojo.com/blog/images/2021/04/weekly-favorites-chocolate-packaging-boxes-thumbnail.jpg" class="img-fluid" alt="">" class="img-fluid" alt="">
+            <img src="https://packmojo.com/blog/images/2021/04/weekly-favorites-chocolate-packaging-boxes-thumbnail.jpg" class="img-fluid" alt="">
 
           </div>
 
