--- a/index.html
+++ b/index.html
@@ -156,11 +156,9 @@
         </div>
 
         <div class="row skills-content">
-
-          <div class="col-lg-12" data-aos="fade-up">
             
-            <img src="https://packmojo.com/blog/images/2021/04/weekly-favorites-chocolate-packaging-boxes-thumbnail.jpg" class="img-fluid" alt="">
-
+          <div class="col-lg-12" data-aos="fade-right">
+            <img src="https://www.chocolate.lindt.com/media/wysiwyg/Mother-and-Children-720x460.jpg" class="img-fluid" alt="">
           </div>
 
         </div>
