--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <div class="row">
           <div class="col-lg-12" data-aos="fade-right">
-            <img src="https://packmojo.com/blog/images/2021/04/weekly-favorites-chocolate-packaging-boxes-thumbnail.jpg" class="img-fluid" alt="">
+            <img src="https://www.chocolate.lindt.com/media/wysiwyg/Mother-and-Children-720x460.jpg" class="img-fluid" alt="">
           </div>
         </div>
 
