--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
               <span data-purecounter-start="0" data-purecounter-end="100" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Coco beans</strong> are all traceable and verified by an independent third party</p>
+              <p><strong>Percent that our coco beans</strong> are traceable and verified by an independent third party</p>
             </div>
           </div>
 
