--- a/index.html
+++ b/index.html
@@ -245,9 +245,9 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-CLASSIC">App</li>
+              <li data-filter=".filter-EXCELLENCE">Card</li>
+              <li data-filter=".filter-PRALIES">Web</li>
             </ul>
           </div>
         </div>
