--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#Prouducts" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Products</span></a></li>
+          <li><a href="#careers" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Careers</span></a></li>
+          <li><a href="#prouducts" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Products</span></a></li>
           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
@@ -171,8 +171,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Careers</h2>
+          <p>Our success is dependent on our people. At Raymond, we want to empower our staff to reach their full potential. We look for individuals from a diverse range of backgrounds. They all offer different perspectives but, crucially, share the same dedication, drive and ambition.  We invest in talent because we know that any product is only as good as the people behind it. That is what makes our chocolate world-class. We want to make a difference in your life – so you can make a difference in ours.</p>
         </div>
 
         <div class="row">
