--- a/index.html
+++ b/index.html
@@ -177,10 +177,9 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="Our Story-title">Sumary</h3>
             <div class="Our Story-item pb-0">
-              <h4>Raymond Chocolate</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <h4>Group CEO statement</h4>
+              <p><em>“The most important factor of our success was – and always will be – our passionate employees. The team comes first for me. Trust, respect and a clear focus on common ambitious goals form the foundations for our successful teams of experts across our entire Group. I advocate an open culture that promotes diversity, encourages contrasting opinions and takes calculated risks. That is the prerequisite for the successful future of this company – a unique company which I am hugely proud of managing.”</em></p>
               <ul>
                 <li>Portland par 127,Orlando, FL</li>
                 <li>(123) 456-7891</li>
@@ -188,18 +187,11 @@
               </ul>
             </div>
 
-            <h3 class="Our Story-title">Education</h3>
+            <h3 class="Our Story-title">Benefits</h3>
             <div class="Our Story-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <p>We are a successful business with a family feel and a wealth of opportunities for growth - both in your professional and personal life. We are constantly expanding and have the possibility to provide you with international experiences. All of our employees at every location enjoy top-tier benefits aligned with the local market. And don’t forget all that chocolate!</p>
             </div>
-            <div class="Our Story-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+          
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
