--- a/index.html
+++ b/index.html
@@ -195,17 +195,10 @@
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="Our Story-title">Professional Experience</h3>
+            <h3 class="Our Story-title">Our Culture</h3>
             <div class="Our Story-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
-              <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-              </ul>
+              <h4>Impactful</h4>
+              <p>We take every opportunity to make an impact. From meeting the specific needs of our customers to seeking new challenges - on local and global scales - to drive our success as a business. We make it happen.</p>
             </div>
             <div class="Our Story-item">
               <h4>Graphic design specialist</h4>
