--- a/index.html
+++ b/index.html
@@ -201,15 +201,8 @@
               <p>We take every opportunity to make an impact. From meeting the specific needs of our customers to seeking new challenges - on local and global scales - to drive our success as a business. We make it happen.</p>
             </div>
             <div class="Our Story-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
-              <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul>
+              <h4>Passionate</h4>
+              <p>We show passion in everything we do. We are dedicated to going the extra mile for our customers and employees; helping drive forward innovation and achieve continuous success. We are incredibly proud of our heritage and balance our core values with an open, future-focused, attitude that welcomes change in order to grow. The only thing that always remains the same is our commitment to quality.</p>
             </div>
           </div>
         </div>
