--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <div class="row">
           <div class="col-lg-12" data-aos="fade-right">
-            <img src=""C:\Users\rayce\OneDrive\桌面\weekly-favorites-chocolate-packaging-boxes-thumbnail.jpg"" class="img-fluid" alt="">
+            <img src="https://packmojo.com/blog/images/2021/04/weekly-favorites-chocolate-packaging-boxes-thumbnail.jpg" class="img-fluid" alt="">
           </div>
         </div>
 
