--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>Raymond Chocolate@gmail.com</p>
               </div>
 
               <div class="phone">
